@@ -1,7 +1,6 @@
 package com.example.teabot.model.enums;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @FunctionalInterface
@@ -10,7 +9,6 @@ public interface OrderParameter {
     Stream<String> parametersAsStream();
 
     default List<String> parameters() {
-        return parametersAsStream().collect(Collectors.toList());
+        return parametersAsStream().toList();
     }
-
 }
